@@ -1,7 +1,7 @@
 //////////////////////////////////////////////////////////////////////////
 //  
 //  Copyright (c) 2011-2012, John Haddon. All rights reserved.
-//  Copyright (c) 2011, Image Engine Design Inc. All rights reserved.
+//  Copyright (c) 2011-2012, Image Engine Design Inc. All rights reserved.
 //  
 //  Redistribution and use in source and binary forms, with or without
 //  modification, are permitted provided that the following conditions are
@@ -37,23 +37,45 @@
 
 #include "boost/python.hpp"
 
-#include "GafferBindings/TypedObjectPlugBinding.h"
-#include "GafferBindings/Serialiser.h"
-#include "GafferBindings/PlugBinding.h"
+#include "IECore/MessageHandler.h"
+#include "IECore/NullObject.h"
+#include "IECorePython/Wrapper.h"
+#include "IECorePython/RunTimeTypedBinding.h"
+
 #include "Gaffer/TypedObjectPlug.h"
 #include "Gaffer/Node.h"
 
-#include "IECorePython/Wrapper.h"
-#include "IECorePython/RunTimeTypedBinding.h"
+#include "GafferBindings/TypedObjectPlugBinding.h"
+#include "GafferBindings/Serialiser.h"
+#include "GafferBindings/PlugBinding.h"
 
 using namespace boost::python;
 using namespace GafferBindings;
 using namespace Gaffer;
 
+/// \todo This is very similar to serialisePlugValue(), and also similar to 
+/// code in TypedPlugBinding which calls IECorePython::repr(). I think they
+/// could probably all be rationalised into one thing somehow.
+static std::string serialiseValue( Serialiser &s, IECore::ConstObjectPtr value )
+{
+	object o( IECore::constPointerCast<IECore::Object>( value ) );
+	s.modulePath( o );
+	object r = o.attr( "__repr__" )();
+	extract<std::string> resultExtractor( r );
+	std::string result = resultExtractor();
+	if( result.size() && result[0] == '<' )
+	{
+		// looks like the repr function hasn't been defined properly
+		// for this type.
+		return "";
+	}
+	return result;
+}
+
 /// \todo Should we be able to serialise values and default values?
 template<typename T>
 static std::string serialise( Serialiser &s, ConstGraphComponentPtr g )
-{
+{	
 	typename T::ConstPtr plug = IECore::staticPointerCast<const T>( g );
 	std::string result = s.modulePath( g ) + "." + g->typeName() + "( \"" + g->getName() + "\", ";
 	
@@ -61,7 +83,21 @@ static std::string serialise( Serialiser &s, ConstGraphComponentPtr g )
 	{
 		result += "direction = " + serialisePlugDirection( plug->direction() ) + ", ";
 	}
-		
+	
+	std::string defaultValue = serialiseValue( s, plug->defaultValue() );
+	if( defaultValue.size() )
+	{
+		result += "defaultValue = " + defaultValue + ", ";
+	}
+	else
+	{
+		IECore::msg(
+			IECore::Msg::Error,
+			"TypedObjectPlug serialiser",
+			boost::format( "Default value for plug \"%s\" cannot be serialised" ) % g->fullName()	
+		);
+	}
+	
 	if( plug->getFlags() != Plug::Default )
 	{
 		result += "flags = " + serialisePlugFlags( plug->getFlags() ) + ", ";
@@ -76,6 +112,26 @@ static std::string serialise( Serialiser &s, ConstGraphComponentPtr g )
 		{
 			connected = true;
 			result += "input = " + srcNodeName + "[\"" + srcPlug->getName() + "\"]";
+		}
+	}
+	
+	if( !connected && plug->direction()==Plug::In )
+	{
+		/// \todo Remove this cast when we merge the branch where getValue() is
+		/// correctly const.
+		typename T::Ptr p = IECore::constPointerCast<T>( plug );
+		std::string value = serialiseValue( s, p->getValue() );
+		if( value.size() )
+		{
+			result += "value = " + value + ", ";
+		}
+		else
+		{
+			IECore::msg(
+				IECore::Msg::Error,
+				"TypedObjectPlug serialiser",
+				boost::format( "Value for plug \"%s\" cannot be serialised" ) % g->fullName()	
+			);
 		}
 	}
 	
@@ -95,19 +151,30 @@ static typename T::ValuePtr getValue( typename T::Ptr p )
 	return 0;
 }
 
+/// \todo This has a lot in common with construct() functions in the other Plug
+/// bindings - can they not be consolidated somehow?
 template<typename T>
 static typename T::Ptr construct(
 	const char *name,
 	Plug::Direction direction,
 	typename T::ValuePtr defaultValue,
 	unsigned flags,
-	PlugPtr input
+	PlugPtr input,
+	IECore::ObjectPtr value	
 )
 {
 	typename T::Ptr result = new T( name, direction, defaultValue, flags );
+	if( input && value!=IECore::NullObject::defaultNullObject() )
+	{
+		throw std::invalid_argument( "Must specify only one of input or value." );
+	}
 	if( input )
 	{
 		result->setInput( input );
+	}
+	else if( value!=IECore::NullObject::defaultNullObject() )
+	{
+		result->setValue( IECore::runTimeCast<typename T::ValueType>( value ) );
 	}
 	return result;
 }
@@ -134,8 +201,11 @@ static void bind()
 					boost::python::arg_( "name" )=T::staticTypeName(),
 					boost::python::arg_( "direction" )=Plug::In,
 					boost::python::arg_( "defaultValue" )=typename T::ValuePtr(),
-					boost::python::arg_( "flags" )=Plug::None,
-					boost::python::arg_( "input" )=PlugPtr( 0 )
+					boost::python::arg_( "flags" )=Plug::Default,
+					boost::python::arg_( "input" )=PlugPtr( 0 ),
+					// we're using NullObject as the "value not specified" default
+					// argument because None is a valid value.
+					boost::python::arg_( "value" )=IECore::NullObject::defaultNullObject()
 				)
 			)
 		)
